[package]
name = "wk"
version = "0.1.0"
authors = ["furiouzz <christophe.massolin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.5"
serde = { version = "1.0.102", features = ["derive"] }
serde_yaml = "0.8"
regex = "1"
lazy_static = "1.4.0"